--- a/Frontend/BugManager/package.json
+++ b/Frontend/BugManager/package.json
@@ -38,6 +38,7 @@
     "ngx-toastr": "14.0.0",
     "nouislider": "14.6.2",
     "rxjs": "7.2.0",
+    "selenium": "^2.20.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
